[gd_scene load_steps=3 format=3 uid="uid://blps4ntvy18gr"]

[ext_resource type="Script" uid="uid://cq6c6qopmc57x" path="res://Scripts/select_difficulty.gd" id="1_t5yja"]
[ext_resource type="Texture2D" uid="uid://dtw67bo6ikhqs" path="res://Sprites/select_dificulty/select-difficulty-level.jpg" id="2_t5yja"]

[node name="Select_difficulty" type="Node2D"]
script = ExtResource("1_t5yja")

[node name="Select-difficulty-level" type="Sprite2D" parent="."]
position = Vector2(576.5, 324.5)
scale = Vector2(0.562012, 0.421224)
texture = ExtResource("2_t5yja")

[node name="Easy" type="Button" parent="."]
visibility_layer = 0
offset_left = 162.0
offset_top = 72.0
offset_right = 426.0
offset_bottom = 399.0

[node name="Standard" type="Button" parent="."]
visibility_layer = 0
offset_left = 446.0
offset_top = 74.0
offset_right = 710.0
offset_bottom = 401.0

[node name="Hard" type="Button" parent="."]
visibility_layer = 0
offset_left = 731.0
offset_top = 72.0
offset_right = 995.0
offset_bottom = 399.0

[node name="Back" type="Button" parent="."]
visibility_layer = 0
offset_left = 22.0
offset_top = 581.0
offset_right = 86.0
offset_bottom = 629.0

[connection signal="pressed" from="Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Standard" to="." method="_on_standard_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
